src/components/Board/ViewSecrets/ViewSecrets.css
body.active-viewsecrets {
  overflow-y: hidden;
}

.btn-viewsecrets {
  position: relative;
  padding: 0;
  display: block;
  margin: 100px auto 0;
  border: none;
  background: none;
  cursor: pointer;
  width: 25px;
  height: 25px;
  overflow: visible;
  z-index: 2;
}

.btn-viewsecrets img {
  max-width: 50px;
  display: block;
  position: relative;
  z-index: 2;
}

.btn-viewsecrets {
  position: relative;
  padding: 0;
  display: block;
  margin: 100px auto 0;
  border: none;
  background: none;
  cursor: pointer;
  width: 50px;
  height: 50px;
  overflow: visible;
  z-index: 2;
}

.btn-viewsecrets img {
  width: 100%;
  height: 100%;
  display: block;
  position: relative;
  z-index: 2;
}

.light-dots {
  position: absolute;
  top: 50%;
  left: 50%;
  width: 80px;
  height: 80px;
  transform: translate(-50%, -50%);
  pointer-events: none;
  z-index: 3;
}

.light-dot {
  position: absolute;
  width: 6px;
  height: 6px;
  border-radius: 50%;
  transition: all 0.3s ease;
  transform: translate(-50%, -50%);
  z-index: 3;
}

.light-dot.revealed {
  background-color: #ccc;
  box-shadow: none;
}

.light-dot.unrevealed {
  background-color: #f4e1a3;
  box-shadow: 0 0 4px 1px rgba(175, 153, 76, 0.8);
}

.light-dot:nth-child(1) {
  top: 25%;
  right: 6px;
}
.light-dot:nth-child(2) {
  top: 50%;
  right: 0px;
}
.light-dot:nth-child(3) {
  top: 75%;
  right: 5px;
}

.light-dot:nth-child(4) {
  bottom: 2px;
  left: 71%;
}
.light-dot:nth-child(5) {
  bottom: -3px;
  left: 50%;
}
.light-dot:nth-child(6) {
  bottom: 1px;
  left: 27%;
}

.light-dot:nth-child(7) {
  top: 75%;
  left: 8px;
}
.light-dot:nth-child(8) {
  top: 50%;
  left: 4px;
}
.light-dot:nth-child(9) {
  top: 25%;
  left: 9px;
}

.light-dot:nth-child(10) {
  top: 7px;
  left: 34%;
}
.light-dot:nth-child(11) {
  top: 6px;
  left: 64%;
}

.viewsecrets,
.overlay {
  width: 100vw;
  height: 100vh;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  position: fixed;
  z-index: 50;
  display: flex;
  justify-content: center;
  align-items: center;
}

.overlay {
  background: rgba(49, 49, 49, 0.8);
  z-index: 50;
}

.secrets-grid {
  position: relative;
  display: flex;
  flex-wrap: wrap;
  gap: 1rem;
  justify-content: center;
  margin: 1rem 0;
  z-index: 100000; /* content stays above overlay */
  max-height: 90vh;
  overflow-y: auto;
  padding: 20px;
}

.secret-card {
  width: 100%;
  max-width: 300px;
  aspect-ratio: 2/3; /* Common card aspect ratio */
  z-index: 100000;
}

.secret-card img {
  width: 100%;
  height: 100%;
  border-radius: 8px;
  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
  object-fit: cover;
  z-index: 100000;
}

.close-viewsecrets {
  position: absolute;
  top: 10px;
  right: 10px;
  padding: 5px 7px;
  width: 40px;
  height: 40px;
  z-index: 100001;
  background-color: red;
  border-color: black;
}

.no-secrets-message {
  font-size: 2rem;
  font-weight: bold;
  margin-bottom: 40px;
  color: #f4e1a3;
  line-height: 1.2;
}

